--- a/src/dms/datasets/templates/datasets/resource_form.html
+++ b/src/dms/datasets/templates/datasets/resource_form.html
@@ -24,6 +24,7 @@
 
 {% block body_javascript %}
 {{ block.super }}
+{% include "shared/jquery.html" %}
 {{ form.media }}
 {% htmx_script %}
 {% leaflet_js plugins="forms" %}
