--- a/src/dms/projects/templates/projects/projectmembership_form.html
+++ b/src/dms/projects/templates/projects/projectmembership_form.html
@@ -10,8 +10,6 @@
 
 {% block body_javascript %}
 {{ block.super }}
-<script src="https://code.jquery.com/jquery-3.7.1.min.js"
-    integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
-    crossorigin="anonymous"></script>
+{% include "shared/jquery.html" %}
 {{ form.media }}
 {% endblock body_javascript %}
