--- a/src/dms/theme/templates/theme/home.html
+++ b/src/dms/theme/templates/theme/home.html
@@ -9,22 +9,26 @@
 </div>
 
 <div class="mx-auto max-w-none p-5 px-10 my-2">
-    <div class="flex flex-row gap-8">
-        <a class="basis-1/3 flex flex-col bg-white p-5 rounded items-center no-underline" href="{% url 'projects:project_list' %}?status=N">
+    <div class="flex flex-row flex-wrap">
+        <a class="basis-full md:basis-1/3 lg:basis-1/4 xl:basis-1/5 flex flex-col p-5 rounded items-center no-underline" href="{% url 'projects:project_list' %}?status=N">
             <i class="fas fa-people-group fa-4x text-secondary"></i>
             <div class="text-2xl mt-3 font-semibold uppercase">Projects</div>
         </a>
-        <a class="basis-1/3 flex flex-col bg-white p-5 rounded items-center no-underline" href="{% url 'datasets:dataset_list' %}">
+        <a class="basis-full md:basis-1/3 lg:basis-1/4 xl:basis-1/5 flex flex-col p-5 rounded items-center no-underline" href="{% url 'datasets:dataset_list' %}">
             <i class="fas fa-database fa-4x text-secondary"></i>
             <div class="text-2xl mt-3 font-semibold uppercase">Datasets</div>
         </a>
-        <a class="basis-1/3 flex flex-col bg-white p-5 rounded items-center no-underline" href="{% url 'services:service_list' %}">
+        <a class="basis-full md:basis-1/3 lg:basis-1/4 xl:basis-1/5 flex flex-col p-5 rounded items-center no-underline" href="{% url 'datasets:resource_list' %}">
+            <i class="fas fa-file fa-4x text-secondary"></i>
+            <div class="text-2xl mt-3 font-semibold uppercase">Resources</div>
+        </a>
+        <a class="basis-full md:basis-1/3 lg:basis-1/4 xl:basis-1/5 flex flex-col p-5 rounded items-center no-underline" href="{% url 'services:service_list' %}">
             <i class="fas fa-server fa-4x text-secondary"></i>
             <div class="text-2xl mt-3 font-semibold uppercase">Services</div>
         </a>
-        <a class="basis-1/3 flex flex-col bg-white p-5 rounded items-center no-underline" href="{% url 'projects:dmp_list' %}">
+        <a class="basis-full md:basis-1/3 lg:basis-1/4 xl:basis-1/5 flex flex-col p-5 rounded items-center no-underline" href="{% url 'projects:dmp_list' %}">
             <i class="fas fa-file-shield fa-4x text-secondary"></i>
-            <div class="text-2xl mt-3 font-semibold uppercase">DMP<span class="text-lg">s</span></div>
+            <div class="text-2xl mt-3 font-semibold uppercase text-center">Data Management Plans</div>
         </a>
     </div>
 </div>
