fix: center multiple rows

--- a/src/dms/theme/templates/theme/home.html
+++ b/src/dms/theme/templates/theme/home.html
@@ -9,7 +9,7 @@
 </div>
 
 <div class="mx-auto max-w-none p-5 px-10 my-2">
-    <div class="flex flex-row flex-wrap">
+    <div class="flex flex-row flex-wrap justify-center">
         <a class="basis-full md:basis-1/3 lg:basis-1/4 xl:basis-1/5 flex flex-col p-5 rounded items-center no-underline" href="{% url 'projects:project_list' %}?status=N">
             <i class="fas fa-people-group fa-4x text-secondary"></i>
             <div class="text-2xl mt-3 font-semibold uppercase">Projects</div>
