chg: change dropdown title

--- a/src/dms/theme/templates/theme/partials/navigation.html
+++ b/src/dms/theme/templates/theme/partials/navigation.html
@@ -18,7 +18,7 @@
             <c-navigation-menu.link href="{% url 'datasets:dataset_list' %}"><i class="fas fa-database"></i> Datasets</c-navigation-menu.link>
           </c-navigation-menu.item>
           <c-navigation-menu.item>
-            <c-navigation-menu.trigger index='other'>{% trans 'Other' %}</c-navigation-menu.trigger>
+            <c-navigation-menu.trigger index='other'>{% trans 'Browse' %}</c-navigation-menu.trigger>
             <c-navigation-menu.content index='other' class="bg-white md:w-[10rem]">
               <c-navigation-menu.link href="{% url 'datasets:resource_list' %}">
                 <i class="fas fa-file"></i>
