fix: table responsive

--- a/src/dms/theme/static_src/src/styles.css
+++ b/src/dms/theme/static_src/src/styles.css
@@ -137,3 +137,7 @@ table.table thead th.asc.orderable a::after {
 .textarea {
   @apply border border-gray-300 !important;
 }
+
+.table-container {
+  @apply overflow-x-auto;
+}
