--- a/src/dms/datasets/templates/datasets/dataset_detail.html
+++ b/src/dms/datasets/templates/datasets/dataset_detail.html
@@ -22,21 +22,21 @@
 {% has_perm 'datasets.change_dataset' user dataset as can_change %}
 
 
-<div class="flex items-center justify-between">
+<div class="flex flex-col sm:flex-row sm:items-center sm:justify-between gap-4">
     <div>
         <h1 class="text-4xl font-bold">{{ dataset }}</h1>
         <p class="text-sm text-gray-700">
             Created at: {{dataset.created_at}} &bull;
             Last Modified: {{dataset.last_modified_at}}
         </p>
-        <p class="text-sm text-gray-700">Version: {{ dataset.version | default_if_none:'latest'}}</p>
-        <div class="flex gap-1">
+        <p class="text-sm text-gray-700">Version: {{ dataset.version | default_if_none:'latest'}}</p>
+        <div class="flex gap-1 flex-wrap mt-2">
             {% for tag in object.tags.all %}
             <div class="badge badge-info">{{ tag }}</div>
             {% endfor %}
         </div>
     </div>
-    <div class="flex gap-4">
+    <div class="flex gap-2 flex-wrap sm:gap-4 order-last">
         {% if dataset.project %}<a class="btn btn-primary text-primary-content"
             href="{% url 'projects:project_detail' pk=dataset.project_id %}">Project</a>{% endif %}
         <a class="btn btn-primary text-primary-content" href="{% url 'datasets:dataset_relationship_list' pk=dataset.id %}">Relationships</a>
@@ -57,13 +57,13 @@
         {% endif %}
         {% has_perm 'datasets.delete_dataset' user dataset as can_delete %}
         {% if can_delete %}
-        <a class="btn btn-danger text-error-content" href="{% url 'datasets:dataset_delete' pk=dataset.id %}">Delete</a>
+        <a class="btn btn-error text-error-content" href="{% url 'datasets:dataset_delete' pk=dataset.id %}">Delete</a>
         {% endif %}
     </div>
 </div>
 
-<div class="flex gap-2">
-    <div class="order-2 p-1 w-sm">
+<div class="flex flex-col lg:flex-row gap-4 lg:gap-2">
+    <div class="order-2 lg:order-1 p-1 w-full lg:w-sm hidden lg:block">
         <ul class="menu sticky top-[70px]">
             <li>
                 <h3 class="menu-title">Table of Contents</h3>
@@ -78,25 +78,25 @@
             </li>
         </ul>
     </div>
-<c-accordion type='multiple' open="{'item-1': false, 'item-2': true, 'contrib': true, 'map': true, 'desc': true, 'related': true}" class="mt-4 grow">
+<c-accordion type='multiple' open="{'item-1': false, 'item-2': true, 'contrib': true, 'map': true, 'desc': true, 'related': true}" class="mt-4 grow order-1 lg:order-2 w-full">
     <c-accordion.item value='desc'>
         <c-accordion.trigger value='desc' class="text-2xl font-bold"><h3 id="metadata">Metadata</h3></c-accordion.trigger>
         <c-accordion.content value='desc' class="flex flex-col gap-2">
             {% for t in object.metadata.titles %}
-            <div class="flex gap-8">
-                <h4 class="font-bold">{{t.titleType}}</h4>
+            <div class="flex flex-col sm:flex-row gap-2 sm:gap-8">
+                <h4 class="font-bold min-w-fit">{{t.titleType}}</h4>
                 <p>{{t.title}}</p>
             </div>
             {% endfor %}
             {% for d in object.metadata.descriptions %}
-            <div class="flex gap-8">
-                <h4 class="font-bold">{{d.descriptionType}}</h4>
+            <div class="flex flex-col sm:flex-row gap-2 sm:gap-8">
+                <h4 class="font-bold min-w-fit">{{d.descriptionType}}</h4>
                 <div>{{d.description|markdown}}</div>
             </div>
             {% endfor %}
             {% if object.metadata.alternateIdentifiers %}
-            <div class="flex gap-8">
-                <h4 class="font-bold">Unique identifiers</h4>
+            <div class="flex flex-col sm:flex-row gap-2 sm:gap-8">
+                <h4 class="font-bold min-w-fit">Unique identifiers</h4>
                 <ul>
                     {% for i in object.metadata.alternateIdentifiers %}
                     <li>{{i.alternateIdentifierType}}: {{i.alternateIdentifier}}</li>
@@ -105,39 +105,41 @@
             </div>
             {% endif %}
             {% if object.metadata.rightsList%}
-            <div class="flex gap-8">
-                <h4 class="font-bold">Rights and licenses</h4>
-                {% for r in object.metadata.rightsList %}
-                <p>{{r.rights}} {{r.rightsIdentifier}} {% if r.rightsURI %}({{r.rightsURI}}){% endif %}</p>
-                {% endfor %}
+            <div class="flex flex-col sm:flex-row gap-2 sm:gap-8">
+                <h4 class="font-bold min-w-fit">Rights and licenses</h4>
+                <div>
+                    {% for r in object.metadata.rightsList %}
+                    <p>{{r.rights}} {{r.rightsIdentifier}} {% if r.rightsURI %}({{r.rightsURI}}){% endif %}</p>
+                    {% endfor %}
+                </div>
             </div>
             {% endif %}
             {% if object.metadata.language %}
-            <div class="flex gap-8">
-                <h4 class="font-bold">Language</h4>
+            <div class="flex flex-col sm:flex-row gap-2 sm:gap-8">
+                <h4 class="font-bold min-w-fit">Language</h4>
                 <p>{{object.metadata.language}}</p>
             </div>
             {% endif %}
             {% if object.metadata.publicationYear %}
-            <div class="flex gap-8">
-                <h4 class="font-bold">Publication Year</h4>
+            <div class="flex flex-col sm:flex-row gap-2 sm:gap-8">
+                <h4 class="font-bold min-w-fit">Publication Year</h4>
                 <p>{{object.metadata.publicationYear}}</p>
             </div>
             {% endif %}
             {% for d in object.metadata.dates %}
-            <div class="flex gap-8">
-                <h4 class="font-bold">{{d.dateType}}</h4>
+            <div class="flex flex-col sm:flex-row gap-2 sm:gap-8">
+                <h4 class="font-bold min-w-fit">{{d.dateType}}</h4>
                 <p>{{d.date}}{% if d.dateInformation %} - {{ d.dateInformation }}{% endif %}</p>
             </div>
             {% endfor %}
             {% if object.metadata.subjects %}
-            <div class="flex gap-8">
-                <h4 class="font-bold">Subjects</h4>
+            <div class="flex flex-col sm:flex-row gap-2 sm:gap-8">
+                <h4 class="font-bold min-w-fit">Subjects</h4>
                 <ul>
                     {% for i in object.metadata.subjects %}
                     <li>{{i.subject}}</li>
                     {% endfor %}
-                </div>
+                </ul>
             </div>
             {% endif %}
         </c-accordion.content>
@@ -191,7 +193,7 @@
         <c-accordion.content value='item-2'>
             {% if can_change %}
             <c-navigation-menu class="mb-4">
-                <c-navigation-menu.list class="items-center justify-start gap-2">
+                <c-navigation-menu.list class="items-center justify-start gap-2 flex-wrap">
                     <c-navigation-menu.item>
                         <c-navigation-menu.link class="bg-secondary text-secondary-content"
                             href='{% url "datasets:resource_create" dataset_pk=dataset.pk %}'>
