--- a/src/dms/datasets/templates/datasets/resource_detail_base.html
+++ b/src/dms/datasets/templates/datasets/resource_detail_base.html
@@ -11,20 +11,20 @@
 
 {% block article %}
 
-<div class="flex items-center justify-between">
+<div class="flex flex-col sm:flex-row sm:items-center sm:justify-between gap-4">
     <div>
         <h1 class="text-4xl font-bold">{{ object }}</h1>
         <p class="text-sm text-gray-700">
             Created at: {{object.created_at}} &bull;
             Last Modified: {{object.last_modified_at}}
         </p>
-        <div class="flex gap-1">
+        <div class="flex gap-1 flex-wrap mt-2">
             {% for tag in object.tags.all %}
             <div class="badge badge-info">{{ tag }}</div>
             {% endfor %}
         </div>
     </div>
-    <div class="flex gap-4">
+    <div class="flex gap-2 flex-wrap sm:gap-4 order-last">
         <a class="btn btn-primary" href="{% url 'datasets:dataset_detail' pk=object.dataset_id %}">Dataset</a>
 
         {% has_perm 'datasets.change_resource' user object as can_change %}
