--- a/src/dms/theme/templates/cotton/dropdown_menu/item.html
+++ b/src/dms/theme/templates/cotton/dropdown_menu/item.html
@@ -17,9 +17,9 @@
     outline-hidden
     transition-colors
     focus:bg-accent
-    focus:text-accent-foreground
+    focus:text-accent-content
     hover:bg-accent
-    hover:text-accent-foreground
+    hover:text-accent-content
     data-[disabled]:pointer-events-none
     data-[disabled]:opacity-50
     [&>svg]:size-4
