--- a/src/dms/theme/templates/cotton/table/empty.html
+++ b/src/dms/theme/templates/cotton/table/empty.html
@@ -1,7 +1,7 @@
 <c-table.row>
     <c-table.cell
       class="
-        p-4 whitespace-nowrap align-middle text-sm text-foreground',
+        p-4 whitespace-nowrap align-middle text-sm text-content',
         {% if class %}
           {{ class }}
         {% endif %}
