--- a/src/dms/theme/templates/cotton/dropdown_menu/content.html
+++ b/src/dms/theme/templates/cotton/dropdown_menu/content.html
@@ -10,7 +10,7 @@
     border
     bg-popover
     p-1
-    text-popover-foreground
+    text-popover-content
     shadow-md
     data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0
     data-[state=open]:fade-in-0 data-[state=closed]:zoom-out-95 data-[state=open]:zoom-in-95
