--- a/src/dms/theme/templates/cotton/navigation_menu/content.html
+++ b/src/dms/theme/templates/cotton/navigation_menu/content.html
@@ -9,7 +9,7 @@
   x-transition:leave-start="opacity-100 translate-y-0"
   x-transition:leave-end="opacity-0 translate-y-[-10px]"
   @mouseleave="closeAll()"
-  class="absolute left-0 top-full mt-1.5 w-full overflow-hidden rounded-md border bg-popover p-4 text-popover-foreground shadow-lg md:w-auto {% if class %}{{ class }}{% endif %}"
+  class="absolute left-0 top-full mt-1.5 w-full overflow-hidden rounded-md border bg-popover p-4 text-popover-content shadow-lg md:w-auto {% if class %}{{ class }}{% endif %}"
   {{ attrs }}
 >
   {{ slot }}
