--- a/src/dms/datasets/templates/datasets/resource_filter.html
+++ b/src/dms/datasets/templates/datasets/resource_filter.html
@@ -1,5 +1,5 @@
 {% extends 'base_filter.html' %}
-{% load leaflet_tags %}
+{% load leaflet_tags static %}
 
 {% block title %}
 Resources | {{ block.super }}
@@ -11,5 +11,6 @@ Resources | {{ block.super }}
 {{ block.super }}
 {% leaflet_js plugins="forms" %}
 {% leaflet_css plugins="forms" %}
+<script src="{% static 'js/map-resize.js' %}"></script>
 {{ form.media }}
 {% endblock body_javascript %}
