--- a/src/dms/datasets/templates/datasets/resource_form.html
+++ b/src/dms/datasets/templates/datasets/resource_form.html
@@ -29,4 +29,5 @@
 {% htmx_script %}
 {% leaflet_js plugins="forms" %}
 {% leaflet_css plugins="forms" %}
+<script src="{% static 'js/map-resize.js' %}"></script>
 {% endblock body_javascript %}
