--- a/src/dms/theme/templates/cotton/navigation_menu/content.html
+++ b/src/dms/theme/templates/cotton/navigation_menu/content.html
@@ -2,6 +2,7 @@
 
 <div
   x-show="activeIndex === '{{ index }}'"
+  x-cloak
   x-transition:enter="transition ease-out duration-200"
   x-transition:enter-start="opacity-0 translate-y-[-10px]"
   x-transition:enter-end="opacity-100 translate-y-0"
